--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "android-properties"
 description = "Rust-based Android properties wrapper"
-version = "0.1.0"
+version = "0.2.0-alpha.0"
 authors = ["Mikhail Lappo <mikhail.lappo@esrlabs.com>"]
 edition = "2018"
 license = "MIT"
