--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ keywords = [
     "bionic",
     "persistent"
 ]
+exclude = [".travis.yml"]
 
 [features]
 # Use this feature if you have Android 8 and older versions
