--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "android-properties"
 description = "Rust-based Android properties wrapper"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["Mikhail Lappo <mikhail.lappo@esrlabs.com>"]
 edition = "2018"
 license = "MIT"
@@ -19,9 +19,8 @@ keywords = [
 categories = ["external-ffi-bindings", "os", "os::linux-apis"]
 exclude = [".travis.yml", "check.sh"]
 
-[features]
-# Use this feature if you have Android 8 and older versions
-bionic-deprecated = []
+[dependencies]
+libc = "0.2.126"
 
 [package.metadata.docs.rs]
 targets = ["arm-linux-androideabi", "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-unknown-linux-gnu"]
